configure collection cell

--- a/TransactionViewer/Main Flow/ProductsScreen/ProductsViewController.storyboard
+++ b/TransactionViewer/Main Flow/ProductsScreen/ProductsViewController.storyboard
@@ -16,9 +16,24 @@
                     <view key="view" contentMode="scaleToFill" id="yiA-FY-6eQ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.0" green="0.48627450979999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="H0X-tI-IK5">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="H0X-tI-IK5" firstAttribute="top" secondItem="hOz-dl-2Cv" secondAttribute="top" id="fFt-Lq-mwS"/>
+                            <constraint firstItem="hOz-dl-2Cv" firstAttribute="bottom" secondItem="H0X-tI-IK5" secondAttribute="bottom" id="p79-b7-VWI"/>
+                            <constraint firstItem="H0X-tI-IK5" firstAttribute="leading" secondItem="hOz-dl-2Cv" secondAttribute="leading" id="usF-cW-MsY"/>
+                            <constraint firstItem="hOz-dl-2Cv" firstAttribute="trailing" secondItem="H0X-tI-IK5" secondAttribute="trailing" id="wPo-Hz-vtG"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="hOz-dl-2Cv"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="H0X-tI-IK5" id="rE7-2F-89Z"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yOg-14-iSe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
