--- a/TransactionViewer/Main Flow/ProductsScreen/ProductCell/ProductCell.xib
+++ b/TransactionViewer/Main Flow/ProductsScreen/ProductCell/ProductCell.xib
@@ -29,13 +29,23 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qlC-hO-TwN">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="59.5"/>
+                        <connections>
+                            <action selector="tap" destination="qGp-pC-dEd" eventType="touchUpInside" id="1RB-PA-6Er"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="qlC-hO-TwN" firstAttribute="top" secondItem="i4f-1a-g7g" secondAttribute="top" id="0YE-LD-dsB"/>
+                    <constraint firstAttribute="bottom" secondItem="qlC-hO-TwN" secondAttribute="bottom" id="R8m-19-RHA"/>
                     <constraint firstItem="ezL-eP-lcY" firstAttribute="top" secondItem="i4f-1a-g7g" secondAttribute="top" constant="16" id="Ti8-bC-Kdc"/>
                     <constraint firstAttribute="trailing" secondItem="6UY-MR-j5B" secondAttribute="trailing" constant="20" id="ZXA-H3-kuc"/>
                     <constraint firstItem="ezL-eP-lcY" firstAttribute="leading" secondItem="i4f-1a-g7g" secondAttribute="leading" constant="20" id="ar7-er-J0u"/>
                     <constraint firstItem="6UY-MR-j5B" firstAttribute="centerY" secondItem="ezL-eP-lcY" secondAttribute="centerY" id="gnl-Gd-mDu"/>
                     <constraint firstAttribute="bottom" secondItem="ezL-eP-lcY" secondAttribute="bottom" constant="16" id="hLh-L9-X5g"/>
+                    <constraint firstAttribute="trailing" secondItem="qlC-hO-TwN" secondAttribute="trailing" id="p8W-VD-HjL"/>
+                    <constraint firstItem="qlC-hO-TwN" firstAttribute="leading" secondItem="i4f-1a-g7g" secondAttribute="leading" id="pUe-Io-dEM"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
